// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders risk areas error 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  />
  <div
    className={undefined}
  >
    Unable to load risk areas
  </div>
  <div
    className={undefined}
  >
    Sorry, something went wrong. Please try reloading this section again.
  </div>
  <div
    className=""
    onClick={[Function]}
  >
    Try again
  </div>
</div>
`;

exports[`renders risk areas loading 1`] = `
<div
  className={undefined}
>
  Loading...
</div>
`;
